1998-07-13  Raja R Harinath  <harinath@cs.umn.edu>

	* argp.h (ARGP_EI): Define to `extern __inline__', rather that
	`extern inline'.  Since this code is inside an __OPTIMIZE__ check,
	I assume this is GCC, and __inline__ will work.

	* mkstemp.c: New file.
	* gnomesupport.awk: Conditionally emit prototype for `mkstemp'.

Tue Jul  7 00:02:51 1998  Tom Tromey  <tromey@cygnus.com>

	* argp-help.c: Don't include <malloc.h>.

1998-06-11  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (gnomesupport.h): Build with `gnomesupport.awk'.
	(CROSS_COMPILING): Remove.
	(EXTRA_DIST): Add `gnomesupport.awk'.

	* gnomesupport.awk: New file, to replace `gnomesupport-h.c'.
	* gnomesupport-h.c: Removed.  Doesn't work well in cross-compiles.

1998-06-08  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am (gnomesupport-h): When cross-compiling, this
	is build using `$(build_CC)' because it needs to run on the
	build system. Look at gnome-libs/configure.in to see how to
	get `build_CC'.

Thu May 21 21:21:12 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-argp.h: Unconditionally declare program_invocation_name
	and program_invocation_short_name; some systems define these but
	don't declare them.

1998-05-20  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (INCLUDES): Define _GNU_SOURCE.

1998-05-19  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-h.c (strerror): Emit declaration.
	* strerror.c: New file.  Imported from GNU libiberty.

1998-05-19  Martin Baulig  <martin@home-of-linux.org>

	* vsnprintf.c (vsnprintf): Changed declaration of this
	function on systems defining __STDC__ to avoid clash
	with prototype in system header file.

	* vsnprintf.c (snprintf): Moved toward the end of the
	file, so that the compiler sees correct declaration for
	vsnprintf().

1998-05-12  Kjartan Maraas  <kmaraas@fib.hl.no>

	* argp-help.c (argp_doc): Backed out previous "fix". :-)
	As pointed out it was dead wrong.
	
1998-05-09  Kjartan Maraas  <kmaraas@fib.hl.no>
