@@ -1,3 +1,9 @@
+1998-07-14  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* mkstemp.c (<stdint.h>): Systems that don't have `mkstemp'
+	probably don't have <stdint.h> either.  Will fix it with a proper
+	autoconf test later.
+
 1998-07-13  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* argp.h (ARGP_EI): Define to `extern __inline__', rather that
